soften brush not working in UV editor for texturing #63233

Closed
opened 2019-04-03 00:44:24 +02:00 by Daniel Ulrich · 16 comments

System Information
Operating system: Kubuntu 16.04
Graphics card: GTX 1070

Blender Version
Broken: (example: 2.80,b936d7b16c62, master, 2019-03-31, as found on the splash screen)

Short description of error

soften brush not working in UV view for texturing

Exact steps for others to reproduce the error

  • create cube
  • go to texture paint workspace
  • create a default 1024*1024 texture
  • create material for cube, connect the image texture created to base color
  • texture won't update in texture workspace unless switching to a different workspace and back, this might be another bug.
  • paint a stroke in UV view
  • try to use soften brush. works in 3D view but not in UV view (smear and draw seem to work fine. On an unrelated note, Soften seems to be veeery slow even in the viewport)
**System Information** Operating system: Kubuntu 16.04 Graphics card: GTX 1070 **Blender Version** Broken: (example: 2.80,b936d7b16c62, master, 2019-03-31, as found on the splash screen) **Short description of error** soften brush not working in UV view for texturing **Exact steps for others to reproduce the error** - create cube - go to texture paint workspace - create a default 1024*1024 texture - create material for cube, connect the image texture created to base color - *texture won't update in texture workspace unless switching to a different workspace and back, this might be another bug.* - paint a stroke in UV view - try to use soften brush. works in 3D view but not in UV view (smear and draw seem to work fine. On an unrelated note, Soften seems to be veeery slow even in the viewport)
Author

Added subscriber: @dan2

Added subscriber: @dan2

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-04-03 12:10:14 +02:00

The brush does work, but the result is so subtle that it is barely unnoticeable in the UV viewport. It seems to be a very big discrepancy between the brush influence in the UV editor and the 3D viewport.

@brecht feel free to reassign if this is not for you.

The brush does work, but the result is so subtle that it is barely unnoticeable in the UV viewport. It seems to be a very big discrepancy between the brush influence in the UV editor and the 3D viewport. @brecht feel free to reassign if this is not for you.
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Looks like there is something wrong with the weights for each pixel, checking that.

Looks like there is something wrong with the weights for each pixel, checking that.
Brecht Van Lommel removed their assignment 2019-04-03 12:36:36 +02:00
Jacques Lucke was assigned by Brecht Van Lommel 2019-04-03 12:36:36 +02:00
Member

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Member

Ok, took me a while to kind-of understand the data flow when painting on images.
Everything seems to work as expected.

The main problem is that the default Brush -> Kernel Radius is 1. This leads to the following kernel matrix used for softening.

0.000123 0.011109 0.000123
0.011109 1.000000 0.011109
0.000123 0.011109 0.000123

This matrix does almost nothing. Furthermore, the effect is decreased even more by the default strength of 0.2.

I suggest we do one of the following things:

  • Set the default blur mode to Box instead of Gaussian.
  • Set the default kernel radius to 2.
  • Implement another blur mode, that is a mix between Box and Gaussian, so that it is more useful when the kernel radius is 1.
Ok, took me a while to kind-of understand the data flow when painting on images. Everything seems to work as expected. The main problem is that the default `Brush -> Kernel Radius` is 1. This leads to the following kernel matrix used for softening. ``` 0.000123 0.011109 0.000123 0.011109 1.000000 0.011109 0.000123 0.011109 0.000123 ``` This matrix does almost nothing. Furthermore, the effect is decreased even more by the default strength of `0.2`. I suggest we do one of the following things: - Set the default blur mode to `Box` instead of `Gaussian`. - Set the default kernel radius to `2`. - Implement another blur mode, that is a mix between `Box` and `Gaussian`, so that it is more useful when the kernel radius is `1`.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

What if we just set the default strength to 1?

I'm not familiar enough with the logic of how the blur tool works internally to comment on how the kernel radius should work. I think @ideasman42 has done some work in the area of painting - looping him in.

What if we just set the default strength to 1? I'm not familiar enough with the logic of how the blur tool works internally to comment on how the kernel radius should work. I think @ideasman42 has done some work in the area of painting - looping him in.

Even with a strength of 1, the brush doesn't really do anything in the UV editor. In the viewport however, it will blur the texture heavily.

Even with a strength of 1, the brush doesn't really do anything in the UV editor. In the viewport however, it will blur the texture heavily.

@ZedDB Ok, yes, I see. @JacquesLucke's suggestion is probably a good one, I just don't want to comment on the exact logic specifically.

@ZedDB Ok, yes, I see. @JacquesLucke's suggestion is probably a good one, I just don't want to comment on the exact logic specifically.

This issue was referenced by c043ab1cf3

This issue was referenced by c043ab1cf3bce77248a8d7dfa42b2e9f8f9611aa
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Rubium

Added subscriber: @Rubium

Added subscriber: @Morgane-DANO

Added subscriber: @Morgane-DANO

Hi,
Don't know if it will help, but I had issues with the blur brush as you all, I could make it right by changing the stroke method from space to airbrush.

Hi, Don't know if it will help, but I had issues with the blur brush as you all, I could make it right by changing the stroke method from space to airbrush.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63233
No description provided.