Fix T63233: Set default blur kernel radius to 2.

Reviewers: jbakker

Differential Revision: https://developer.blender.org/D4722