source/blender/blenloader/intern/versioning_defaults.c
@@ -353,4 +353,8 @@ void BLO_update_defaults_startup_blend(Main *bmain, const char *app_template)
     copy_v2_fl2(scene->safe_areas.title, 0.1f, 0.05f);
     copy_v2_fl2(scene->safe_areas.action, 0.035f, 0.035f);
   }
+
+  for (Brush *brush = bmain->brushes.first; brush; brush = brush->id.next) {
+    brush->blur_kernel_radius = 2;
+  }
 }
